fixed thread overlap

--- a/slackclone/src/app/chat-main/chat-main.component.scss
+++ b/slackclone/src/app/chat-main/chat-main.component.scss
@@ -269,6 +269,19 @@ h4 {
 
 .message_text_content {
 
+    pre {
+        white-space: pre-wrap;
+        /* Since CSS 2.1 */
+        white-space: -moz-pre-wrap;
+        /* Mozilla, since 1999 */
+        white-space: -pre-wrap;
+        /* Opera 4-6 */
+        white-space: -o-pre-wrap;
+        /* Opera 7 */
+        word-wrap: break-word;
+        /* Internet Explorer 5.5+ */
+    }
+
     a {
         word-break: break-word;
     }
