--- a/slackclone/src/app/chat-thread/chat-thread.component.scss
+++ b/slackclone/src/app/chat-thread/chat-thread.component.scss
@@ -119,11 +119,34 @@
             box-shadow: 0 0 2px 0 grey;
             object-fit: contain;
             cursor: zoom-in;
+            width: 170px;
+            height: auto;
         }
     }
+}
 
+.message-body {
 
+    pre {
+        white-space: pre-wrap;
+        /* Since CSS 2.1 */
+        white-space: -moz-pre-wrap;
+        /* Mozilla, since 1999 */
+        white-space: -pre-wrap;
+        /* Opera 4-6 */
+        white-space: -o-pre-wrap;
+        /* Opera 7 */
+        word-wrap: break-word;
+        /* Internet Explorer 5.5+ */
+    }
 
+    a {
+        word-break: break-word;
+    }
+
+    p {
+        word-break: break-word;
+    }
 }
 
 h4,
@@ -162,7 +185,7 @@ h4 {
     //max-height: 100%;
     overflow-x: hidden;
     overflow-y: scroll;
-    
+
 }
 
 .messages_wrapper:hover {
@@ -181,7 +204,7 @@ h4 {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: rgba(123, 123, 123,0.5);
+    background: rgba(123, 123, 123, 0.5);
     border-radius: 10px;
 }
 
@@ -202,7 +225,7 @@ h4 {
     border-radius: 3px;
 }
 
-.logo-centered{
+.logo-centered {
     display: flex;
     justify-content: center;
 }
